--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('todo_task_create') }}">Dodaj nowe zadanie</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_register') }}">Zarejestruj się</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_login') }}">Zaloguj się</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Wyloguj się</a>
+                </li>
             </ul>
         </div>
     </nav>
