--- a/templates/Expire.html.twig
+++ b/templates/Expire.html.twig
@@ -1,17 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Your link is expired. Please type your email one more time.{% endblock %}
+{% block title %}Expire{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
 
     <h1>Your link is expired. Please type your email one more time.</h1>
 
-    {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.email) }}
+    {{ form_start(form) }}
+        {{ form_row(form.email) }}
 
-    <button type="submit" class="btn">Send again</button>
-    {{ form_end(registrationForm) }}
+        <button type="submit" class="btn">Send again</button>
+    {{ form_end(form) }}
 {% endblock %}
