--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,9 @@
                     <a class="nav-link" href="{{ path('todo_task_create') }}">Dodaj nowe zadanie</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('invite') }}">Zaproś znajomego</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{{ path('app_register') }}">Zarejestruj się</a>
                 </li>
                 <li class="nav-item active">
