--- a/templates/edit_form.html.twig
+++ b/templates/edit_form.html.twig
@@ -22,6 +22,11 @@
                 </div>
 
                 <div class="form-group">
+                    {{ form_label(form.isDone) }}
+                    {{ form_widget(form.isDone) }}
+                </div>
+
+                <div class="form-group">
                     {{ form_label(form.category) }}
                     {{ form_widget(form.category) }}
                 </div>
