--- a/public/assets/CSS/bootstrap/bootstrap.css
+++ b/public/assets/CSS/bootstrap/bootstrap.css
@@ -539,12 +539,25 @@ pre code {
   overflow-y: scroll;
 }
 
-.container {
+.container{
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container1{
+  width:60%;
+  padding-right:15px;
+  padding-left:15px;
+  margin-right:20%;
+  margin-left:20%;
+  background-color:whitesmoke;
+  color:black;
+  border-radius: 15px;
+  text-align:center;
+  padding-bottom: 5%;
 }
 
 @media (min-width: 576px) {
